_site/sql/hive/src/test/resources/ql/src/test/queries/positive/input1.q
FROM src
INSERT OVERWRITE TABLE dest1 SELECT src.key, src.value WHERE src.key < 100
