_site/sql/hive/src/test/resources/ql/src/test/queries/negative/unknown_function1.q
FROM src
INSERT OVERWRITE TABLE dest1 SELECT '1234', dummyfn(src.value, 10) WHERE src.key < 100
